<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="das.findmyfood.interfaces.DetalleOfertaFragment"
    android:orientation="vertical"
    android:background="#8A0808">

    <TextView
        style="@style/StyleDetalles"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Titulo_Oferta"
        android:id="@+id/textTitulo"
        android:textColor="#fff" />

    <TextView
        style="@style/StyleDetalles"
        android:text="@string/Descripcion_Oferta"
        android:id="@+id/textDescripcion"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <Button
        style="@style/StyleBotonDetalles"
        android:text="@string/Restaurante"
        android:id="@+id/buttonRestaurante"
        android:singleLine="false"
        android:textColor="#fff" />

</LinearLayout>
